--- a/src/assets/home.scss
+++ b/src/assets/home.scss
@@ -20,9 +20,9 @@ h2{
 .by{
   font-size: 80%;
   font-weight: 700;
-  margin-top: 30px;
-  margin-bottom: 20px;
-  color: $color-green;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  color: $color-purple;
   .dash{
     display: inline-block;
     width: 20%;
@@ -33,15 +33,21 @@ h2{
     height:1px;content:'';display:block;border-top:1px dotted $color-green;
   }
   a{
-    color: $color-green;
+    color: $color-purple;
     padding: 0 5px;
+  }
+  .aToken{
+    color: $color-green;
+  }
+  .token{
+    margin-top: 10px;
   }
 }
 hr{
   border: 1px dashed $color-green;
 }
 .picUploadList{
-  margin: 30px;
+  margin: 20px;
   padding: 0 10px;
   overflow: hidden;
 
@@ -56,4 +62,7 @@ hr{
   .el-table{
 
   }
+}
+.exportEX{
+  margin: 10px 0 30px!important;
 }
